src/objects/IP_Idea__c.object
<CustomObject>
    <description>Ideas submitted by Salesforce users.</description>
    <fields>
        <fullName>Body__c</fullName>
        <description>http://jira.fruit.com/browse/SFDC-1129</description>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The category the idea relates to.</description>
        <label>Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IP_Category__c.Available__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>IP_Category__c</referenceTo>
        <relationshipName>IP_Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_Threshold_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to track is the point threshold of the idea&apos;s zone has ever been reached to prevent performing logic multiple times when it should run once.</description>
        <label>Point Threshold Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostedBy__c</fullName>
        <description>Field added mainly so the author could be displayed in syndicated feeds without the need for access to the user object</description>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Zone__c</field>
                <operation>equals</operation>
                <valueField>IP_Status__c.Zone__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IP_Status__c</referenceTo>
        <relationshipLabel>Ideas</relationshipLabel>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>http://jira.fruit.com/browse/SFDC-1129</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <description>http://jira.fruit.com/browse/SFDC-1129</description>
        <label>Total Score</label>
        <summarizedField>IP_Vote__c.Points__c</summarizedField>
        <summaryForeignKey>IP_Vote__c.Idea__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Votes__c</fullName>
        <description>http://jira.fruit.com/browse/SFDC-1129</description>
        <label>Total Votes</label>
        <summaryForeignKey>IP_Vote__c.Idea__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>http://jira.fruit.com/browse/SFDC-1129</description>
        <label>Zone</label>
        <referenceTo>IP_Zone__c</referenceTo>
        <relationshipLabel>Ideas</relationshipLabel>
        <relationshipName>IP_Ideas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Idea</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Idea Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>